# fitrah

./: .dockerignore  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  prettier.config.cjs  railway.toml
.cursor/rules/: backend.mdc  core.mdc  database.mdc  logic-flows.mdc  nextjs.mdc
.github/workflows/: api-deploy.yml  dev-admin.yml  dev-web.yml  prod-admin.yml  prod-web.yml  web-deploy.yml
apps/admin/: env.example  eslint.config.mjs  package.json  proxy.ts  tailwind.config.ts  tsconfig.json
apps/admin/app/: globals.css  layout.tsx  page.tsx
apps/admin/app/(dashboard)/: layout.tsx
apps/admin/app/actions/: sign-out.ts
apps/admin/app/login/: login-action.ts  login-form.tsx  page.tsx
apps/admin/components/: Recorder.tsx
apps/admin/components/dashboard/: dashboard-nav.tsx  sign-out-button.tsx
apps/admin/components/ui/: button.tsx  card.tsx
apps/admin/lib/auth/: admin.ts
apps/api/: README.md
apps/backend/: .gitignore  Dockerfile  README.md  pyproject.toml
apps/backend/app/: __main__.py  config.py  main.py
apps/backend/tests/: test_health.py
apps/web/: eslint.config.mjs  next.config.ts  package.json  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: Joe_animated.d.ts  Joe_animated.jsx  Platform.d.ts  Platform.jsx  Space.d.ts  Space.jsx  chat-interface.tsx  enter-transition.tsx  landing-page.tsx  world-experience.tsx
apps/web/hooks/: use-is-touch-device.ts
apps/web/lib/: dialogue-chunks.ts
apps/web/stores/: joe-chat-store.ts
docs/logic_flows/: README.md
(+17 files in other folders)
